# Silding-Window

./: 1343. Number of Sub-arrays of Size K and Average Greater than or Equal to Threshold.cpp  CMakeLists.txt  Drawing 2024-04-24 17.36.24.excalidraw.md  Find the K-Beauty of a Number.cpp  Grumpy Bookstore Owner.cpp  Maximum Number of Vowels in a Substring of Given Length.cpp  Maxmum Average Subrray I.cpp  Minimum Difference Between Hightest and Lowest of K Scores.cpp  README.md  main.cpp
