cmake_minimum_required(VERSION 3.27)
project(Sliding_Window)

set(CMAKE_CXX_STANDARD 17)

add_executable(Sliding_Window main.cpp
        "Grumpy Bookstore Owner.cpp"
        "Maximum Number of Vowels in a Substring of Given Length.cpp"
        "Maximum Number of Vowels in a Substring of Given Length.cpp"
        "Find the K-Beauty of a Number.cpp"
        "Minimum Difference Between Hightest and Lowest of K Scores.cpp"
        "Minimum Difference Between Hightest and Lowest of K Scores.cpp"
        "Maxmum Average Subrray I.cpp")
